2008-05-15  Richard Guenther  <rguenther@suse.de>

PR middle-end/36244
	* tree-ssa-alias.c (new_type_alias): Do not set TREE_READONLY.
	* tree-flow-inline.h (unmodifiable_var_p): Memory tags never
	represent unmodifiable vars.

	* gcc.dg/torture/pr36244.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@135336 138bc75d-0d04-0410-961f-82ee72b054a4